eerste push naar juiste git

--- a/src/styles/globals/_colors.scss
+++ b/src/styles/globals/_colors.scss
@@ -6,6 +6,11 @@ $dusty: #999;
 $shark: #262626;
 $midnight: #003569;
 
+$yellow: #ffe30b;
+$red: #e51c1c;
+$green: #24e51c;
+$blue: #1c24e5;
+
 $white: #fff;
 $black: #000;
 
