--- a/src/styles/globals/_typography.scss
+++ b/src/styles/globals/_typography.scss
@@ -1,2 +1,9 @@
 $font-size-base: 14px;
 $font-size-small: 12px;
+$font-size-medium: 22px;
+$font-size-large: 30px;
+
+@import url("https://use.typekit.net/mrw1bpl.css");
+
+$font: lores-12, sans-serif;
+
