--- a/src/styles/utils/_layout.scss
+++ b/src/styles/utils/_layout.scss
@@ -32,3 +32,25 @@
 .u-spacer-t {
 	margin-top: rem(40px);
 }
+
+.u-spacer-l {
+	margin-top: 4.8vh;
+}
+
+.u-spacer-s {
+	margin-top: 1vh;
+}
+
+.u-spacer-xl {
+	margin-top: 10vh;
+}
+
+.u-spacer-xxl {
+	margin-top: 30vh;
+}
+
+.u-spacer-rem {
+	padding-top: rem(25px);
+}
+
+
