--- a/src/styles/quarks/_typography.scss
+++ b/src/styles/quarks/_typography.scss
@@ -1,3 +1,47 @@
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+.a-text-title {
+	font-family: $font;
+	color: $white;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-style: normal;
+	font-size: $font-size-large;
+}
+
+.a-text-small {
+	font-family: $font;
+	color: $white;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-style: normal;
+	font-size: $font-size-medium;
+	padding-left: 5vw;
+}
+
+
+.a-btn-text {
+	font-family: $font;
+	color: $white;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-style: normal;
+	font-size: $font-size-large;
+}
+
+.a-input {
+	font-family: $font;
+	color: $white;
+	font-weight: 700;
+	font-style: normal;
+	font-size: $font-size-small;
+	background-color: $black;
+	border: 2px solid $yellow;
+	padding: rem(8px) rem(40px);
+}
+
+.a-text-center {
+	text-align: center;
+}
