--- a/src/templates/home.hbs
+++ b/src/templates/home.hbs
@@ -3,15 +3,13 @@
   <h1>
     {{bold title}}
   </h1>
-  <div class="m-banner">
-    {{routerImageLink "firebase" "../assets/images/mobdev-header.jpeg" "Mobile Development Banner" "myImage"}}
-  </div>
   <p>
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio et doloribus similique perferendis velit excepturi sapiente quibusdam. Voluptatem qui natus pariatur iste nemo aut minima laborum! Eaque sapiente earum quo.
   </p>
   <ul>
     <li>{{routerLink "firebase" "Ga naar de Firebase pagina"}}</li>
     <li>{{routerLink "mapbox" "Ga naar de Mapbox pagina"}}</li>
+    <li>{{routerLink "login" "Ga naar login pagina"}}</li>
   </ul>
 </div>
 {{> footer }}
