--- a/src/templates/startscherm.hbs
+++ b/src/templates/startscherm.hbs
@@ -19,7 +19,7 @@
 			<p class="a-text-title u-spacer-l">Scoreboard</p>
 			<p class="a-text-title u-spacer-l">{{routerLink "joinGame" "Join Game"}}</p>
 			<p class="a-text-title u-spacer-l">{{routerLink "rules" "rules"}}</p>
-			<p class="a-text-title u-spacer-l" id="logoutBtn">Logout</p>
+			<button class="a-text-title u-spacer-l" id="logoutBtn">Logout</button>
 		</div>
 	</div>
 
