--- a/src/templates/startgame.hbs
+++ b/src/templates/startgame.hbs
@@ -49,6 +49,21 @@
 					<option value="1300">1300 meter</option>
 				</select>
 			</form>
+            <p class="a-text-title u-spacer-l">Time</p>
+			<img class="a-logo-arrow" src="../assets/icons/pixil-frame-0.svg" alt="">
+			<form>
+				<select class="" name="time" id="time">
+					<option value="1">1 min</option>
+					<option value="3">3 min</option>
+					<option value="5">5 min</option>
+					<option value="10">10 min</option>
+					<option value="15">15 min</option>
+					<option value="20">20 min</option>
+					<option value="30">30 min</option>
+					<option value="45">45 min</option>
+					<option value="60">60 min</option>
+				</select>
+			</form>
 			<button class="a-text-title u-spacer-l" id="startBtn">Start Game</button>
 			<p class="a-text-title">{{routerLink "startscherm" "Back" }}</p>
 		</div>
