--- a/src/templates/lose.hbs
+++ b/src/templates/lose.hbs
@@ -4,8 +4,8 @@
 			<img src="../assets/icons/logo/You're_IT_GAMEOVER.png" alt="You're IT" class="a-logo-it">
 		</div>
 		<div class="u-center-h">
-            <button class="a-text-title u-spacer-l" id="logoutBtn">Startscherm</button>
-			<button class="a-text-title u-spacer-l" id="logoutBtn">Logout</button>
+            <button class="a-text-title u-spacer-l" id="startSchermLose">Startscherm</button>
+			<button class="a-text-title u-spacer-l" id="loseLogoutBtn">Logout</button>
 		</div>
 	</div>
 
