--- a/src/templates/win.hbs
+++ b/src/templates/win.hbs
@@ -4,8 +4,9 @@
 			<img src="../assets/icons/logo/You're_IT_EsQ.png" alt="You're IT" class="a-logo-it">
 		</div>
 		<div class="u-center-h">
-            <button class="a-text-title u-spacer-l" id="logoutBtn">Startscherm</button>
-			<button class="a-text-title u-spacer-l" id="logoutBtn">Logout</button>
+            <p class="a-text-title u-spacer-l">You've won!!!</p>
+            <button class="a-text-title u-spacer-l" id="btnWinStart">Startscherm</button>
+			<button class="a-text-title u-spacer-l" id="btnLogoutWin">Logout</button>
 		</div>
 	</div>
 
